Bug 1143491: Parse all trun boxes in MP4 fragments, not only the first one. r=jya